[tool.poetry]
name = "gb-rest"
version = "0.1.0"
description = "A REST API that handles requests for the mobile app 'gymbro'."
authors = ["thomaskrabichler <thomaskrabichler@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
firebase-admin = "^6.0.1"
SQLAlchemy = "^1.4.46"
uvicorn = "^0.20.0"
requests = "^2.28.1"
pydantic = "^1.10.4"
alembic = "^1.9.1"
tenacity = "^8.1.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
